@@ -25,6 +25,7 @@ This project receives help from these awesome contributors:
 - Mel Dafert
 - Andrii Kohut
 - Roland Walker
+- Doug Harris
 
 Thanks
 ------
