@@ -1,5 +1,10 @@
 # Changelog
 
+TBD
+---
+
+- Added format_timestamps preprocessor for per-column date/time formatting.
+
 ## Version 2.3.1
 
 - Don't escape newlines in `ascii` tables, and add `ascii_escaped` table format.
